jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   annotations:
      kubernetes.io/ingress.class: traefik
   name: jenkins
spec:
   rules:
   -  host: jenkinsdemo.eccidev.net
      http:
         paths:
         -  path: /
            pathType: Prefix
            backend:
               service:
                  name: jenkins
                  port:
                     number: 8080

~
